# open-snipping

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  angular.json  fix_icon.py  implementation_plan.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html  script.js  style.css
scripts/icon_utils/: check_32.py  check_icon.py  check_icon_again.py  check_icon_bg.py  convert_icon.py  fix_icon.py  force_transparent.py  test_icon.py
src/: index.html
src-tauri/: Cargo.toml  com.lqt1912.open-snipping.metainfo.xml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  image_processor.rs  lib.rs
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts
src/app/components/editor/: editor.component.css  editor.component.html  editor.component.ts
src/app/components/overlay/: overlay.component.css  overlay.component.html  overlay.component.ts
